# obliviate

./: .gitignore  .travis.yml  README.md  com.github.elfenware.obliviate.yml  meson.build
.github/workflows/: ci.yml  vala-lint.yml
data/: Application.css  com.github.elfenware.obliviate.appdata.xml.in  com.github.elfenware.obliviate.desktop.in  com.github.elfenware.obliviate.gresource.xml  com.github.elfenware.obliviate.gschema.xml  com.github.elfenware.obliviate.metainfo.xml.in  gschema.xml  meson.build
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.elfenware.obliviate.pot  es.po  fr.po  it.po  nl.po  ru.po  sv.po
po/extra/: POTFILES  es.po  extra.pot  fr.po  it.po  nl.po  ru.po
src/: Application.vala  Crypto.vala  MainView.vala  MainWindow.vala  Service.vala  meson.build
